# python-fin-news-trader

./: .gitignore  GITHUB_UPLOAD_GUIDE.md  PHASE1_IMPROVEMENTS.md  README.md  advanced_sentiment_analyzer.py  alert_system.py  app.py  async_processor.py  backtester.py  big_mover_dashboard.py  big_mover_tracker.py  cache.py  cli_trader.py  config.py  data_visualizer.py  edge_screener.py  errors.py  example_big_mover.py  logger.py  news_correlation_engine.py  news_scraper.py  portfolio_tracker.py  pyproject.toml  real_data_sources.py  requirements.txt  sentiment_analyzer.py  stock_list_fetcher.py  test_system.py  trading_engine.py  trading_strategy.py  utils.py  volume_analyzer.py
.ipynb_checkpoints/: app-checkpoint.py
config/: settings.yaml
tests/: __init__.py  conftest.py  test_backtester.py  test_portfolio_tracker.py  test_trading_strategy.py
