[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "nltk>=3.9.1",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "requests>=2.32.3",
    "spacy>=3.8.6",
    "streamlit>=1.45.1",
    "tqdm>=4.67.1",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.61",
]
